# ai_webot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: deepseek.json  deepseek.yaml  doubao.json  doubao.yaml  qianwen.json  qianwen.yaml
src/ai_webot/: __init__.py  api.py  cli.py
src/ai_webot/drivers/: __init__.py  browser.py
src/ai_webot/services/: __init__.py  config_service.py  file_exceptions.py
src/ai_webot/webot/: __init__.py
src/ai_webot/webot/base/: __init__.py  web_bot.py
src/ai_webot/webot/deepseek/: __init__.py  bot.py
src/ai_webot/webot/doubao/: __init__.py  bot.py
src/ai_webot/webot/qianwen/: __init__.py  bot.py
