[project]
name = "ai-webot"
version = "0.1.0"
description = "AI Web版对话机器人框架（基于 Python 和 Playwright 的教育应用项目）"
authors = [
    {name = "码上工坊",email = "3892493481@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["ai", "chatbot", "automation", "playwright", "python"]
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.57.0,<2.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [
    {include = "ai_webot", from = "src"}
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
ai-webot = "ai_webot.cli:main"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)"
]
